<resources>
    <string name="app_name">OpenCVJava</string>
    <string name="action_settings">Settings</string>
    <!-- Fragment String -->
    <string name="first_fragment_label">First Fragment</string>
    <!-- Button Strings -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- TextView Strings -->
    <string name="number_of_circles">Number Of Circles:</string>
    <string name="total_value_of_coins">Total Value of Coins:</string>
    <string name="number">99999999</string>
    <string name="six_coins">Six Coins</string>
</resources>