<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_circles"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/number_of_circles"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textview_coins"
        app:layout_constraintEnd_toStartOf="@+id/textview_circles_number"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textview_circles_number"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/number"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textview_coins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_circles" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_previous" />

    <Button
        android:id="@+id/button_previous"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_next"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageview_coins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/six_coins"
        android:src="@drawable/coins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_coins"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/total_value_of_coins"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_previous"
        app:layout_constraintEnd_toStartOf="@+id/textview_coins_number"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textview_coins_number"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/number"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_coins" />
</androidx.constraintlayout.widget.ConstraintLayout>